<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="p_ModbusRx_OutputCoils" Id="{943c36cb-adb4-42b1-982e-b281da4eed9b}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM p_ModbusRx_OutputCoils
VAR
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[HOMS2_XGantry.PAxis.bTwkFwd:=mb_Output_Coils[60];
HOMS2_XGantry.PAxis.bTwkBwd:=mb_Output_Coils[61];
HOMS2_XGantry.SAxis.bTwkFwd:=mb_Output_Coils[62];
HOMS2_XGantry.SAxis.bTwkBwd:=mb_Output_Coils[63];
HOMS2_YGantry.PAxis.bTwkFwd:=mb_Output_Coils[64];
HOMS2_YGantry.PAxis.bTwkBwd:=mb_Output_Coils[65];
HOMS2_YGantry.SAxis.bTwkFwd:=mb_Output_Coils[66];
HOMS2_YGantry.SAxis.bTwkBwd:=mb_Output_Coils[67];
HOMS2_Pitch.Axis.bTwkFwd:=mb_Output_Coils[68];
HOMS2_Pitch.Axis.bTwkBwd:=mb_Output_Coils[69];
HOMS2_Pitch.Piezo.xEnable:=mb_Output_Coils[72];
HOMS2_Pitch.Axis.xStop:=mb_Output_Coils[73];
HOMS2_XGantry.xUncouple:=mb_Output_Coils[76];
HOMS2_YGantry.xUncouple:=mb_Output_Coils[77];
HOMS2_XGantry.PAxis.xReset := mb_Output_Coils[95];
HOMS2_YGantry.PAxis.xReset := mb_Output_Coils[96];
HOMS2_Pitch.Axis.xReset := mb_Output_Coils[97];
]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>