<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="p_ModbusTx_PLCMemory" Id="{d85d0cac-5378-471f-b9d9-8f92ec2f478e}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM p_ModbusTx_PLCMemory
VAR

END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
MEMCPY(srcAddr:=ADR(HOMS2_XGantry.PAxis.stStatus.rActPosition), destAddr:=ADR(mb_PLC_Memory[130]), n:=SIZEOF(HOMS2_XGantry.PAxis.stStatus.rActPosition));
MEMCPY(srcAddr:=ADR(HOMS2_XGantry.PAxis.stStatus.rActVelocity), destAddr:=ADR(mb_PLC_Memory[132]), n:=SIZEOF(HOMS2_XGantry.PAxis.stStatus.rActVelocity));
MEMCPY(srcAddr:=ADR(HOMS2_XGantry.PAxis.stAxis.NcToPlc.SetAcc), destAddr:=ADR(mb_PLC_Memory[134]), n:=SIZEOF(HOMS2_XGantry.PAxis.stAxis.NcToPlc.SetAcc));
MEMCPY(srcAddr:=ADR(HOMS2_XGantry.SAxis.stStatus.rActPosition), destAddr:=ADR(mb_PLC_Memory[136]), n:=SIZEOF(HOMS2_XGantry.SAxis.stStatus.rActPosition));
MEMCPY(srcAddr:=ADR(HOMS2_XGantry.SAxis.stStatus.rActVelocity), destAddr:=ADR(mb_PLC_Memory[138]), n:=SIZEOF(HOMS2_XGantry.SAxis.stStatus.rActVelocity));
MEMCPY(srcAddr:=ADR(HOMS2_XGantry.SAxis.stAxis.NcToPlc.SetAcc), destAddr:=ADR(mb_PLC_Memory[140]), n:=SIZEOF(HOMS2_XGantry.SAxis.stAxis.NcToPlc.SetAcc));
MEMCPY(srcAddr:=ADR(HOMS2_YGantry.PAxis.stStatus.rActPosition), destAddr:=ADR(mb_PLC_Memory[142]), n:=SIZEOF(HOMS2_YGantry.PAxis.stStatus.rActPosition));
MEMCPY(srcAddr:=ADR(HOMS2_YGantry.PAxis.stStatus.rActVelocity), destAddr:=ADR(mb_PLC_Memory[144]), n:=SIZEOF(HOMS2_YGantry.PAxis.stStatus.rActVelocity));
MEMCPY(srcAddr:=ADR(HOMS2_YGantry.PAxis.stAxis.NcToPlc.SetAcc), destAddr:=ADR(mb_PLC_Memory[146]), n:=SIZEOF(HOMS2_YGantry.PAxis.stAxis.NcToPlc.SetAcc));
MEMCPY(srcAddr:=ADR(HOMS2_YGantry.SAxis.stStatus.rActPosition), destAddr:=ADR(mb_PLC_Memory[148]), n:=SIZEOF(HOMS2_YGantry.SAxis.stStatus.rActPosition));
MEMCPY(srcAddr:=ADR(HOMS2_YGantry.SAxis.stStatus.rActVelocity), destAddr:=ADR(mb_PLC_Memory[150]), n:=SIZEOF(HOMS2_YGantry.SAxis.stStatus.rActVelocity));
MEMCPY(srcAddr:=ADR(HOMS2_YGantry.SAxis.stAxis.NcToPlc.SetAcc), destAddr:=ADR(mb_PLC_Memory[152]), n:=SIZEOF(HOMS2_YGantry.SAxis.stAxis.NcToPlc.SetAcc));
MEMCPY(srcAddr:=ADR(HOMS2_Pitch.Stepper.stStatus.rActPosition), destAddr:=ADR(mb_PLC_Memory[154]), n:=SIZEOF(HOMS2_Pitch.Stepper.stStatus.rActPosition));
MEMCPY(srcAddr:=ADR(HOMS2_Pitch.Stepper.stStatus.rActVelocity), destAddr:=ADR(mb_PLC_Memory[156]), n:=SIZEOF(HOMS2_Pitch.Stepper.stStatus.rActVelocity));
MEMCPY(srcAddr:=ADR(HOMS2_Pitch.Stepper.stAxis.NcToPlc.SetAcc), destAddr:=ADR(mb_PLC_Memory[158]), n:=SIZEOF(HOMS2_Pitch.Stepper.stAxis.NcToPlc.SetAcc));

MEMCPY(srcAddr:=ADR(HOMS2_Pitch.Piezo.rActVoltage), destAddr:=ADR(mb_PLC_Memory[166]), n:=SIZEOF(HOMS2_Pitch.Piezo.rActVoltage));
MEMCPY(srcAddr:=ADR(HOMS2_Pitch.Piezo.UpperVoltage), destAddr:=ADR(mb_PLC_Memory[168]), n:=SIZEOF(HOMS2_Pitch.Piezo.UpperVoltage));
MEMCPY(srcAddr:=ADR(HOMS2_Pitch.Piezo.LowerVoltage), destAddr:=ADR(mb_PLC_Memory[170]), n:=SIZEOF(HOMS2_Pitch.Piezo.LowerVoltage));

MEMCPY(srcAddr:=ADR(HOMS2_XGantry.DiffTol), destAddr:=ADR(mb_PLC_Memory[180]), n:=SIZEOF(HOMS2_XGantry.DiffTol));
MEMCPY(srcAddr:=ADR(HOMS2_XGantry.Diff), destAddr:=ADR(mb_PLC_Memory[182]), n:=SIZEOF(HOMS2_XGantry.Diff));
MEMCPY(srcAddr:=ADR(HOMS2_YGantry.DiffTol), destAddr:=ADR(mb_PLC_Memory[184]), n:=SIZEOF(HOMS2_YGantry.DiffTol));
MEMCPY(srcAddr:=ADR(HOMS2_YGantry.Diff), destAddr:=ADR(mb_PLC_Memory[186]), n:=SIZEOF(HOMS2_YGantry.Diff));




MEMCPY(destAddr:=ADR(mb_PLC_Memory[36]), srcAddr:=ADR(HOMS2_Pitch.Axis.rReqAbsPos), n:=SIZEOF(HOMS2_Pitch.Axis.rReqAbsPos));



MEMCPY(srcAddr:=ADR(HOMS2_Pitch.ReqPosLimLo), destAddr:=ADR(mb_PLC_Memory[236]), n:=SIZEOF(HOMS2_Pitch.ReqPosLimLo));
MEMCPY(srcAddr:=ADR(HOMS2_Pitch.ReqPosLimHi), destAddr:=ADR(mb_PLC_Memory[238]), n:=SIZEOF(HOMS2_Pitch.ReqPosLimHi));


MEMCPY(destAddr:=ADR(mb_PLC_Memory[64]), srcAddr:=ADR(HOMS2_Pitch.Stepper.rStepperDmovRange), n:=SIZEOF(HOMS2_Pitch.Stepper.rStepperDmovRange));
MEMCPY(destAddr:=ADR(mb_PLC_Memory[66]), srcAddr:=ADR(HOMS2_Pitch.Piezo.rPiezoDmovRange), n:=SIZEOF(HOMS2_Pitch.Piezo.rPiezoDmovRange));


]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>